--- a/com.redwoodmonkey.installer/Info.plist
+++ b/com.redwoodmonkey.installer/Info.plist
@@ -11,6 +11,8 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>SMAuthorizedClients</key>
-	<array/>
+	<array>
+		<string>identifier "com.redwoodmonkey.FermentrackManager" and anchor apple generic and certificate leaf[subject.CN] = "Apple Development: corbinstreehouse@mac.com (4K3T94L6KW)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+	</array>
 </dict>
 </plist>
