Move redis to be installed from the source app

--- a/com.redwoodmonkey.installer/Info.plist
+++ b/com.redwoodmonkey.installer/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>XPCService</key>
+	<dict>
+		<key>ServiceType</key>
+		<string>Application</string>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>com.redwoodmonkey.installer</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -12,7 +17,7 @@
 	<string>1</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier "com.redwoodmonkey.FermentrackManager" and anchor apple generic and certificate leaf[subject.CN] = "Apple Development: corbinstreehouse@mac.com (4K3T94L6KW)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<string>identifier &quot;com.redwoodmonkey.FermentrackManager&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;Apple Development: corbinstreehouse@mac.com (4K3T94L6KW)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
 	</array>
 </dict>
 </plist>
