--- a/FermentrackManager/Info.plist
+++ b/FermentrackManager/Info.plist
@@ -35,7 +35,7 @@
 	<key>SMPrivilegedExecutables</key>
 	<dict>
 		<key>com.redwoodmonkey.FermentrackProcessManager</key>
-		<string></string>
+		<string>identifier "com.redwoodmonkey.FermentrackProcessManager" and anchor apple generic and certificate leaf[subject.CN] = "Apple Development: corbinstreehouse@mac.com (4K3T94L6KW)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
 	</dict>
 </dict>
 </plist>
