--- a/FermentrackManager.xcodeproj/xcshareddata/xcschemes/com.redwoodmonkey.FermentrackProcessManager.xcscheme
+++ b/FermentrackManager.xcodeproj/xcshareddata/xcschemes/com.redwoodmonkey.FermentrackProcessManager.xcscheme
@@ -34,25 +34,14 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      launchStyle = "1"
+      launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <PathRunnable
-         runnableDebuggingMode = "0"
-         BundleIdentifier = "com.redwoodmonkey.FermentrackProcessManager"
-         FilePath = "/Users/corbin/Library/Developer/Xcode/DerivedData/FermentrackManager-dosydjigduddyegnblvbapjsgxeq/Build/Products/Debug/com.redwoodmonkey.FermentrackProcessManager.xpc">
-      </PathRunnable>
-   </LaunchAction>
-   <ProfileAction
-      buildConfiguration = "Release"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      savedToolIdentifier = ""
-      useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9D16559F236DCECF00BD1E15"
@@ -60,7 +49,24 @@
             BlueprintName = "com.redwoodmonkey.FermentrackProcessManager"
             ReferencedContainer = "container:FermentrackManager.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
+   </LaunchAction>
+   <ProfileAction
+      buildConfiguration = "Release"
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      savedToolIdentifier = ""
+      useCustomWorkingDirectory = "NO"
+      debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "9D16559F236DCECF00BD1E15"
+            BuildableName = "com.redwoodmonkey.FermentrackProcessManager"
+            BlueprintName = "com.redwoodmonkey.FermentrackProcessManager"
+            ReferencedContainer = "container:FermentrackManager.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
