--- a/FermentrackManager/Info.plist
+++ b/FermentrackManager/Info.plist
@@ -37,7 +37,7 @@
 	<key>SMPrivilegedExecutables</key>
 	<dict>
 		<key>com.redwoodmonkey.FermentrackProcessManager</key>
-		<string>identifier "com.redwoodmonkey.FermentrackProcessManager" and anchor apple generic and certificate leaf[subject.CN] = "Apple Development: corbinstreehouse@mac.com (4K3T94L6KW)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<string>anchor apple generic and identifier "com.redwoodmonkey.FermentrackProcessManager" and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = L74PN67Q6R)</string>
 	</dict>
 </dict>
 </plist>
