--- a/com.redwoodmonkey.FermentrackProcessManager/Info.plist
+++ b/com.redwoodmonkey.FermentrackProcessManager/Info.plist
@@ -22,7 +22,7 @@
 	<string>Copyright © 2019 Corbin Dunn. All rights reserved.</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>identifier &quot;com.redwoodmonkey.FermentrackManager&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;Apple Development: corbinstreehouse@mac.com (4K3T94L6KW)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<string>anchor apple generic and identifier "com.redwoodmonkey.FermentrackManager" and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = L74PN67Q6R)</string>
 	</array>
 </dict>
 </plist>
