ignore user data

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /FermentrackManager.xcodeproj/xcuserdata/corbin.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+/FermentrackManager.xcodeproj/project.xcworkspace/xcuserdata
